fixed spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -19,12 +19,6 @@ body {
   font-family: $body-font-family;
   background: linear-gradient($blue, lighten($blue, 15));
 
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-  max-width: 560px;
-  margin: auto;
-
   font-size: 1.1rem;
   font-weight: 300;
   line-height: 1.3;
@@ -42,12 +36,17 @@ a, a:visited {
 }
 
 .container {
-  align-items: center;
-  justify-content: center;
+  display: flex;
+  padding-top: 10vh;
+  min-height: 100vh;
+  flex-direction: column;
+  max-width: 560px;
+  margin: auto;
 }
 
 article {
   padding: 1em;
+  align-self: flex-start;
 }
 
 footer {
